--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/global.css">
 
-    <title>Juiceables</title>
+    <title>NaturalJuice</title>
 </head>
 <body>
     <!--==================== HEADER ====================-->
@@ -97,9 +97,6 @@
                 </div>
             </div>
         </section>
-        <footer class="social">
-            <a href="#"><i class='bx bxl-github'></i></a>
-        </footer>
     </main>
     <!--=============== GSAP ===============-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
